--- a/day_6_exercise_1.ipynb
+++ b/day_6_exercise_1.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,15 @@
       "1  1.615828  \n",
       "2 -1.857962   \n",
       "\n",
-      "\n"
+      "\n",
+      "Multiple Comparison of Means - Tukey HSD, FWER=0.05\n",
+      "===================================================\n",
+      "group1 group2 meandiff p-adj  lower   upper  reject\n",
+      "---------------------------------------------------\n",
+      " Hb SC  Hb SS  -3.5875 0.001 -4.4635 -2.7115   True\n",
+      " Hb SC  Hb Sb    -1.67 0.001  -2.665  -0.675   True\n",
+      " Hb SS  Hb Sb   1.9175 0.001   0.935     2.9   True\n",
+      "---------------------------------------------------\n"
      ]
     }
    ],
@@ -347,7 +355,14 @@
     "print('ANOVA: \\n', aov, '\\n\\n')\n",
     "\n",
     "pt = pg.pairwise_tukey(dv='haemo', between='type', data=haemoglob)\n",
-    "print('Tukey test: \\n', pt, '\\n\\n')"
+    "print('Tukey test: \\n', pt, '\\n\\n')\n",
+    "\n",
+    "\n",
+    "#pqa = pg.pairwise_corr(haemoglob, columns=None, covar=None, tail='two-sided', \n",
+    "#                       method='pearson', padjust='none', nan_policy='pairwise')\n",
+    "\n",
+    "tukey_stats = sm.stats.multicomp.pairwise_tukeyhsd(endog=haemoglob['haemo'], groups=haemoglob['type'], alpha=0.05)\n",
+    "print(tukey_stats)\n"
    ]
   },
   {
@@ -365,10 +380,74 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                  haemo   R-squared:                       0.725\n",
+      "Model:                            OLS   Adj. R-squared:                  0.710\n",
+      "Method:                 Least Squares   F-statistic:                     50.00\n",
+      "Date:                Mon, 26 Apr 2021   Prob (F-statistic):           2.28e-11\n",
+      "Time:                        13:22:09   Log-Likelihood:                -56.596\n",
+      "No. Observations:                  41   AIC:                             119.2\n",
+      "Df Residuals:                      38   BIC:                             124.3\n",
+      "Df Model:                           2                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const          8.7125      0.250     34.869      0.000       8.207       9.218\n",
+      "Hb Sb          1.9175      0.403      4.759      0.000       1.102       2.733\n",
+      "Hb SC          3.5875      0.359      9.987      0.000       2.860       4.315\n",
+      "==============================================================================\n",
+      "Omnibus:                        0.189   Durbin-Watson:                   0.837\n",
+      "Prob(Omnibus):                  0.910   Jarque-Bera (JB):                0.259\n",
+      "Skew:                          -0.147   Prob(JB):                        0.879\n",
+      "Kurtosis:                       2.745   Cond. No.                         3.54\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib/python3/dist-packages/ipykernel_launcher.py:6: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \n",
+      "/usr/lib/python3/dist-packages/ipykernel_launcher.py:7: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  import sys\n"
+     ]
+    }
+   ],
    "source": [
-    "We found a "
+    "# --------------- Multiple regression ---------------\n",
+    "\n",
+    "haemoglob['Hb Sb'] = 0\n",
+    "haemoglob['Hb SC'] = 0\n",
+    "\n",
+    "haemoglob['Hb Sb'][haemoglob['type'] == 'Hb Sb'] = 1\n",
+    "haemoglob['Hb SC'][haemoglob['type'] == 'Hb SC'] = 1\n",
+    "\n",
+    "X = sm.add_constant(haemoglob[['Hb Sb', 'Hb SC']])\n",
+    "Y = haemoglob['haemo']\n",
+    "model = sm.OLS(Y, X).fit()\n",
+    "print(model.summary())"
    ]
   },
   {
