--- a/day_6_exercise_2.ipynb
+++ b/day_6_exercise_2.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -239,67 +239,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "            df        sum_sq      mean_sq         F    PR(>F)\n",
-      "C(group)   2.0  15515.766414  7757.883207  3.711336  0.043589\n",
-      "Residual  19.0  39716.097222  2090.320906       NaN       NaN \n",
-      "\n",
-      "    Intercept  C(group)[T.- NO ]  C(group)[T.NO and O2 for 24 h]\n",
-      "0         1.0                0.0                             1.0\n",
-      "1         1.0                0.0                             1.0\n",
-      "2         1.0                0.0                             1.0\n",
-      "3         1.0                0.0                             1.0\n",
-      "4         1.0                0.0                             1.0\n",
-      "5         1.0                0.0                             1.0\n",
-      "6         1.0                0.0                             1.0\n",
-      "7         1.0                0.0                             1.0\n",
-      "8         1.0                0.0                             0.0\n",
-      "9         1.0                0.0                             0.0\n",
-      "10        1.0                0.0                             0.0\n",
-      "11        1.0                0.0                             0.0\n",
-      "12        1.0                0.0                             0.0\n",
-      "13        1.0                0.0                             0.0\n",
-      "14        1.0                0.0                             0.0\n",
-      "15        1.0                0.0                             0.0\n",
-      "16        1.0                0.0                             0.0\n",
-      "17        1.0                1.0                             0.0\n",
-      "18        1.0                1.0                             0.0\n",
-      "19        1.0                1.0                             0.0\n",
-      "20        1.0                1.0                             0.0\n",
-      "21        1.0                1.0                             0.0 \n",
-      "\n",
-      "                            OLS Regression Results                            \n",
-      "==============================================================================\n",
-      "Dep. Variable:                 folate   R-squared:                       0.281\n",
-      "Model:                            OLS   Adj. R-squared:                  0.205\n",
-      "Method:                 Least Squares   F-statistic:                     3.711\n",
-      "Date:                Mon, 26 Apr 2021   Prob (F-statistic):             0.0436\n",
-      "Time:                        16:00:11   Log-Likelihood:                -113.70\n",
-      "No. Observations:                  22   AIC:                             233.4\n",
-      "Df Residuals:                      19   BIC:                             236.7\n",
-      "Df Model:                           2                                         \n",
-      "Covariance Type:            nonrobust                                         \n",
-      "==================================================================================================\n",
-      "                                     coef    std err          t      P>|t|      [0.025      0.975]\n",
-      "--------------------------------------------------------------------------------------------------\n",
-      "Intercept                        256.4444     15.240     16.827      0.000     224.547     288.342\n",
-      "C(group)[T.- NO ]                 21.5556     25.501      0.845      0.408     -31.820      74.931\n",
-      "C(group)[T.NO and O2 for 24 h]    60.1806     22.216      2.709      0.014      13.682     106.679\n",
-      "==============================================================================\n",
-      "Omnibus:                        2.618   Durbin-Watson:                   0.819\n",
-      "Prob(Omnibus):                  0.270   Jarque-Bera (JB):                1.189\n",
-      "Skew:                           0.021   Prob(JB):                        0.552\n",
-      "Kurtosis:                       1.862   Cond. No.                         3.50\n",
-      "==============================================================================\n",
-      "\n",
-      "Notes:\n",
-      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     "ename": "NameError",
+     "evalue": "name 'folate' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-7c27ab353ed4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mstatsmodels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstats\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0manova\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0manova_lm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mfolate_lm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mols\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'folate ~ C(group, Treatment(reference=\" NO during the operation\"))'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfolate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mtable\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0manova_lm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfolate_lm\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtable\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'\\n'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'folate' is not defined"
      ]
     }
    ],
@@ -308,8 +259,7 @@
     "from statsmodels.graphics.api import interaction_plot, abline_plot\n",
     "from statsmodels.stats.anova import anova_lm\n",
     "\n",
-    "\n",
-    "folate_lm = ols('folate ~ C(group)', data=folate).fit()\n",
+    "folate_lm = ols('folate ~ C(group, Treatment(reference=\" NO during the operation\"))', data=folate).fit()\n",
     "table = anova_lm(folate_lm)\n",
     "print(table, '\\n')\n",
     "\n",
@@ -322,6 +272,23 @@
    "metadata": {},
    "source": [
     "The mean folate value for the group that received 'NO during during the operation' was 256.44 (95% CI 224.54, 288.34). The folate level was higher 'NO and O2 for 24 h' group by 60.18 (95% CI 13.68,   106.68). The change was smaller for the 'no NO' group, by 21.55 (95% CI -31.820, 74.931); the confidence interval going over 0 means that there isn't necessarily a statisticall significance between the groups)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- NO: 316.62 95% CI:  224.95633798584115 307.4419912764032\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('- NO:', 256.44 +60.18, '95% CI: ', np.sqrt(224.54**2 + 13.68**2), np.sqrt(106.68**2 + 288.34**2))"
    ]
   },
   {
